# reader

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  dev.sh  prod.sh
dto/: Cargo.toml
dto/src/: article.rs  category.rs  filter.rs  lib.rs  rss_feed.rs
entity/src/: article.rs  lib.rs  rss_feed.rs
frontend/: Cargo.toml  Trunk.toml  index.html  manifest.json  sw.js  tailwind.config.js
frontend/components/: Cargo.toml
frontend/components/src/: article.rs  article_list.rs  button.rs  category.rs  category_form.rs  category_list.rs  date.rs  filter.rs  filter_form.rs  filter_list.rs  footer.rs  header.rs  header_dropdown.rs  header_dropdown_item.rs  home.rs  icons.rs  input_checkbox.rs  input_color.rs  input_number.rs  input_text.rs  lib.rs  list_item.rs  list_item_thumb.rs  modal.rs  page_container.rs  page_content.rs  readability_article.rs  rss_feed.rs  rss_feed_category.rs  rss_feed_category_list.rs  rss_feed_form.rs  rss_feed_list.rs
frontend/components/src/icons/: README.md  arrow_path.rs  arrow_top_right.rs  bars_3.rs  chat_bubble_left_ellipsis.rs  check.rs  chevron_down.rs  funnel.rs  loading.rs  minus.rs  pencil_square.rs  plus.rs  rss.rs  tag.rs  trash.rs  x_mark.rs
frontend/hooks/: Cargo.toml
frontend/hooks/src/: lib.rs  use_page_reload.rs
frontend/pages/: Cargo.toml
frontend/pages/src/: article.rs  categories.rs  filters.rs  home.rs  lib.rs  rss_feed_articles.rs  rss_feed_categories.rs  rss_feeds.rs
frontend/router/: Cargo.toml
frontend/router/src/: lib.rs
frontend/src/: main.rs
frontend/stores/: Cargo.toml
frontend/stores/src/: article.rs  category.rs  filter.rs  lib.rs  rss_feed.rs
server/: Cargo.toml
server/api/: Cargo.toml
server/api/src/: article.rs  category.rs  error.rs  filter.rs  lib.rs  pagination.rs  rss_feed.rs
server/entity/: Cargo.toml
server/entity/src/: article.rs  category.rs  filter.rs  lib.rs  prelude.rs  rss_feed.rs  rss_feed_category.rs
server/migration/src/: lib.rs  m20220101_000001_add_rss_feed.rs  m20220101_000001_create_table.rs  m20230607_234558_add_article.rs  m20230617_192327_add_category.rs  m20230624_175704_periodic_tasks.rs  m20241207_200312_add_filter.rs
server/service/: Cargo.toml
server/service/src/: article.rs  category.rs  filter.rs  lib.rs  rss_feed.rs
server/src/: main.rs  server.rs
