[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
components = { path = "./components" }
console_error_panic_hook = "0.1.7"
gloo-net = "0.2.6"
log = "0.4.18"
pages = { path = "./pages" }
router = { path = "./router" }
wasm-bindgen-futures = "0.4.36"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yewdux = "0.9.3"
