[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
name = "reader_lib"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
clap = { version = "4.3.1", features = ["derive"] }
dotenvy = "0.15.7"
entity = { path = "entity" }
log = "0.4.18"
migration = { path = "migration" }
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
