[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "api" }
dotenvy = "0.15.7"
openssl = { version = "0.10.54", features = ["vendored"] }
reqwest = { version = "0.11.18", features = ["rustls-tls"], default-features = false }
