[package]
name = "components"
version = "0.1.0"
edition = "2021"

[lib]
name = "components"
path = "src/lib.rs"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.2.6"
entity = { path = "../../entity" }
log = "0.4.18"
router = { path = "../router" }
stores = { path = "../stores" }
time = { version = "0.3.22", features = ["parsing"] }
wasm-bindgen-futures = "0.4.36"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yewdux = "0.9.3"
yew-hooks = "0.2.0"
web-sys = { version = "0.3.63", features = ["HtmlDivElement", "HtmlElement", "IntersectionObserver", "IntersectionObserverEntry", "IntersectionObserverInit", "Window"] }
wasm-bindgen = "0.2.86"
