[package]
name = "hooks"
version = "0.1.0"
edition = "2021"

[lib]
name = "hooks"
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Performance", "PerformanceNavigation", "PerformanceNavigationTiming", "NavigationType"] }
yew = { version = "0.20.0", features = ["csr"] }
yewdux = "0.9.3"
