[package]
name = "service"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
log = "0.4.18"
nanoid = "0.4.0"
sea-orm = { version = "^0" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
